--- a/bidbwiki_local/Views/Admin/UserDashBoard.cshtml
+++ b/bidbwiki_local/Views/Admin/UserDashBoard.cshtml
@@ -12,7 +12,7 @@
 }
 
 <fieldset>
-    <legend> User DashBoard </legend>
+    <h2 style="margin-left:32vw"> Oluşturduğum Gönderiler </h2>
 
     <label>Kullanıcı Adı: </label>
     @if (Session["UserName"] != null)
