--- a/bidbwiki_local/Views/Shared/_AdminLayout.cshtml
+++ b/bidbwiki_local/Views/Shared/_AdminLayout.cshtml
@@ -29,34 +29,41 @@
 
     <style>
         table {
-            width: 100%;
-           
+            
+            background-color: #CE49BF;
         }
 
         th, td {
             text-align: left;
-            border: 1px solid #ddd;
-                 
-            
+            border: 1px solid #733C3C;
+            background-color: #FDF6EC;
         }
+
 
         td {
             font-weight: 600;
+            width: 1px;
+            white-space: nowrap;
         }
+          
+               
+           
 
         th {
             font-weight: 800;
-            font-size:13px;
-            background-color: #c94c4c;
+            font-size: 13px;
+            background-color: #332FD0;
             color: #ececec;
             font-family: Arial Black;
             text-decoration: underline;
         }
 
-        tr:hover {
-            background-color: #b1cbbb;
-            
-            color:red;
+        tr:hover td {
+            background-color: #142d4c;
+            color: #EEEDDE;
+        }
+        tr:hover a{
+            color: #F7F7F7 !important;
         }
 
     
