--- a/bidbwiki_local/Views/Admin/PostDetails.cshtml
+++ b/bidbwiki_local/Views/Admin/PostDetails.cshtml
@@ -9,20 +9,20 @@
 }
 
 <style>
-  nav#gonderiyedon
-  {
-     opacity:0.2;
-     height:auto;
-  }
-  nav#gonderiyedon:hover
-  {
-      opacity:1;
-  }
+    nav#gonderiyedon {
+        opacity: 0.2;
+        height: auto;
+    }
+
+        nav#gonderiyedon:hover {
+            opacity: 1;
+        }
+
 </style>
 
 <nav id="gonderiyedon" class="main-header navbar navbar-expand navbar-white navbar-light" style="position:fixed;right:0;margin-top:-6vh;">
     <ul class="navbar-nav">
-      
+
         <li class="nav-item d-none d-sm-inline-block">
             <a class="btn btn-info " role="button" href="/Admin/ViewPosts">  <i class="fa fa-undo" aria-hidden="true"></i> Gönderilere Dön</a>
         </li>
@@ -30,12 +30,14 @@
 </nav>
 <h2>  @Html.DisplayFor(model => model.Posts.Post_Name)</h2>
 
+<a class="btn btn-light btn-outline-dark " role="button" onclick="lightbg()">  Açık Tema</a>
+<a class="btn btn-dark " role="button" onclick="darkbg()">  Koyu Tema</a>
 
-<div style="margin:40px;">
+<div style="margin:40px;" >
     <hr />
-    <dl class="dl-horizontal" style="background-color: #dbd8e3; border-radius: 20px; padding: 40px; ">
+    <dl class="dl-horizontal"  id="gonderiel" style="background-color: #F7F5F2; border-radius: 20px; padding: 40px; ">
 
-        <section class="col-12">
+        <section class="col-12"> 
             @Html.Raw(HttpUtility.HtmlDecode(Model.Description_Text))
         </section>
 
@@ -59,3 +61,22 @@
     <a class="btn btn-info " role="button" href="/Admin/ViewPosts">  <i class="fa fa-undo" aria-hidden="true"></i> Gönderilere Dön</a>
 
 </p>
+
+<script>
+
+
+    function lightbg() {
+        document.getElementById("gonderiel").style.backgroundColor = "#F7F5F2 ";
+        document.getElementById("gonderiel").style.color = "#3c3d47";
+        document.getElementById("gonderiel").style.textShadow = "2px 0 white, -2px 0 white, 0 2px white, 0 -2px white, 1px 1px white, -1px -1px white, -1px 1px white, 1px -1px white";
+    }
+
+    function darkbg() {
+        document.getElementById("gonderiel").style.backgroundColor = "#233142";
+        
+        document.getElementById("gonderiel").style.color = "#fcfefe"
+        document.getElementById("gonderiel").style.textShadow = "2px 0 black, -2px 0 black, 0 2px black, 0 -2px black, 1px 1px black, -1px -1px black, -1px 1px black, 1px -1px black";
+
+    }
+
+</script>
